[package]
name = "base-export"
version = "0.1.0"
edition = "2021"

[dependencies]
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", features = ["optimism"] }

alloy-primitives = "0.7.0"
alloy-rlp = "0.3.3"

ethers-core = { version = "2.0.14", features = ["optimism"] }
ethers-providers = { version = "2.0.14", default-features = false, features = ["ws", "rustls", "optimism"] }

futures = { version = "0.3.27" }

tokio = { version = "1.32", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.4", features = ["codec"] }
serde_json = "1.0.108"

eyre = "0.6.8"
thiserror = "1.0.40"
clap = { version = "4.4.3", features = ["derive"] }
